cmake_minimum_required(VERSION 3.16)
project(parsing_reals)
include(vendor/jsontoolkit/vendor/noa/cmake/noa.cmake)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -mtune=native")
add_subdirectory(vendor/jsontoolkit)
add_executable(benchmark_jsontoolkit benchmark_jsontoolkit.cc)
noa_add_default_options(PRIVATE benchmark_jsontoolkit)
target_link_libraries(benchmark_jsontoolkit PRIVATE sourcemeta::jsontoolkit::json)
